# aws-oidc-broker

./: .dockerignore  .editorconfig  .env.example  .gitignore  404.html  CNAME  Dockerfile  README.md  app.py  docker-compose.debug.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  secret.yaml  sitemap.xml
.github/workflows/: publish-dockerhub.yml  publish-pages.yml  publish.yml
assets/: devspace.yaml
broker/: __init__.py  data.py  routes.py  serve.py  utils.py
broker/aws/: sts.py
broker/web/static/scripts/: cli.js  main.js
broker/web/static/styles/: __main__.css  base.css  box.css  profile.css
broker/web/templates/: index.html
deployment/: index.html
device/: auth.py  cli.py  config.py  state.py  utils.py
docs/: deployment.md  getting-started.md  index.md  variables.md
docs/assets/: aws-oidc-device-keycloak.json  aws-oidc-keycloak.json  docker-compose-demo.yml
docs/setup/: keycloak.md
getting-started/: index.html
scripts/: _docker_poetry_fix.py
search/: search_index.json
setup/keycloak/: index.html
variables/: index.html
