[tool.poetry]
name = "aws-oidc-broker"
version = "0.1.0"
description = ""
authors = ["Rishang"]
readme = "README.md"
keywords = ["packaging", "poetry"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [{ include = "device" },{ include = "broker" }]

[tool.poetry.scripts]
aws-oidc = "device.cli:app"

[tool.poetry.dependencies]
python = ">=3.9"
rich = "^13.2.0"
typer = "^0.7.0"
authlib = "^1.6.0"
requests = "*"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
flask = "^3.0.0"
boto3 = "^1.34.0"
gunicorn = "^21.2.0"
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
types-requests = "^2.31.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
